--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>profile</title>
+    <title>Richard Ross</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
