--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js "></script>
+    <script type="text/javascript" src="https://popupsmart.com/freechat.js"></script><script> window.start.init({ title: "Hi there ✌️", message: "How may we help you?", color: "#3BCE79", position: "right", placeholder: "Enter your message", withText: "Write with", viaWhatsapp: "Or write us directly via Whatsapp", gty: "Go to your", awu: "and write us", connect: "Connect now",  button: "Write us", device: "everywhere",  services: [{"name":"whatsapp","content":"+27813148131"}]})</script>
 </body>
 
 </html>
