--- a/src/index.html
+++ b/src/index.html
@@ -15,12 +15,12 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
-    <link rel="stylesheet" href="assets/vendor/aos/aos.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap-icons/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/vendor/boxicons/css/boxicons.min.css">
-    <link rel="stylesheet" href="assets/vendor/glightbox/css/glightbox.min.css">
-    <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="src/assets/vendor/aos/aos.css">
+    <link rel="stylesheet" href="src/assets/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="src/assets/vendor/bootstrap-icons/bootstrap-icons.css">
+    <link rel="stylesheet" href="src/assets/vendor/boxicons/css/boxicons.min.css">
+    <link rel="stylesheet" href="src/assets/vendor/glightbox/css/glightbox.min.css">
+    <link rel="stylesheet" href="src/assets/vendor/swiper/swiper-bundle.min.css">
     <!-- Typed text (animated typing effect)-->
     <script type="text/javascript" src="assets/vendor/typed.js/typed.js"></script>
     <script type="text/javascript" src="assets/vendor/typed.js/typed.min.js"></script>
@@ -45,18 +45,18 @@
 
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/purecounter/purecounter.js "></script>
-    <script src="assets/vendor/aos/aos.js "></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js "></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js "></script>
-    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js "></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js "></script>
-    <script src="assets/vendor/typed.js/typed.min.js "></script>
-    <script src="assets/vendor/waypoints/noframework.waypoints.js "></script>
-    <script src="assets/vendor/php-email-form/validate.js "></script>
+    <script src="src/assets/vendor/purecounter/purecounter.js"></script>
+    <script src="src/assets/vendor/aos/aos.js"></script>
+    <script src="src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="src/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="src/assets/vendor/typed.js/typed.min.js"></script>
+    <script src="src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="src/assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="assets/js/main.js "></script>
+    <script src="src\assets\js\main.js"></script>
     <script type="text/javascript" src="https://popupsmart.com/freechat.js"></script><script> window.start.init({ title: "Hi there ✌️", message: "How may we help you?", color: "#3BCE79", position: "right", placeholder: "Enter your message", withText: "Write with", viaWhatsapp: "Or write us directly via Whatsapp", gty: "Go to your", awu: "and write us", connect: "Connect now",  button: "Write us", device: "everywhere",  services: [{"name":"whatsapp","content":"+27813148131"}]})</script>
 </body>
 
